# mabcd-for-digital-twins

./: .gitignore  README.md  pyproject.toml  run_experiments.py
.dvc/: config
data/evaluate/: .gitignore  experiment_1.dvc  experiment_2.dvc  experiment_3.dvc  experiment_d.dvc  experiment_finder_method.dvc
data/finder/: .gitignore  config_A.yaml  exp_a.dvc  exp_b.dvc  exp_c.dvc  exp_d.dvc  exp_e.dvc  exp_f.dvc  exp_g.dvc  exp_i.dvc
data/networks/: .gitignore  Freebase.dvc  small_artificial.dvc
data/twins/: .gitignore  experiment_d.dvc  experiment_finder_method.dvc
scripts/analysis/: configuration_model.py  experiment_1.py  experiment_2.py  experiment_2_losses.py  experiment_3.py  experiment_d.py  experiment_finder_method.py  figures.ipynb  plot_utils.py
scripts/configs/: example_evaluate.yaml  example_find.yaml  example_generate.yaml  example_generate_1.yaml  experiment_freebase_evaluate_fancy_r_tau.yaml  experiment_freebase_evaluate_rudimentary.yaml  experiment_freebase_find_fancy_r.yaml  experiment_freebase_find_fancy_r_tau.yaml  experiment_freebase_find_fancy_tau.yaml  experiment_freebase_find_rudimentary.yaml  experiment_freebase_generate_rudimentary.yaml
src/: finder.py  generator.py  params_handler.py  utils.py
src/config_finder/: config_model.py  correlations.py
src/loaders/: big_real.py  constants.py  net_loader.py  small_artificial.py  small_real.py
src/mfdt/: __init__.py  divergences.py  evaluator.py  finder.py  generator.py  main.py  params_handler.py  utils.py
src/mfdt/config_finder/: __init__.py  ff_loss.py  (+10 more)
src/mln_abcd/: julia_wrapper.py
(+38 files in other folders)
